--- a/bin2dec.html
+++ b/bin2dec.html
@@ -63,7 +63,8 @@
 
     </header>
 <section class="logic">
-
+  <div class="body2">
+    <div class="flex-reg">
 <input type="text" id="input" class="abc" placeholder="Enter the input here">
 <input type="button" id="convertButton" value="Convert" class="button"> 
 
@@ -71,6 +72,8 @@
 
 
     <input type="text" id="output" class="op" placeholder="See the output here">
+    </div>
+  </div>
 </section>
     <footer class="footer">
         <!-- <div class="footer-div-1"> -->
