--- a/bin2hex.html
+++ b/bin2hex.html
@@ -64,12 +64,16 @@
     </header>
  
     <section class="logic">
+      <div class="body2">
+        <div class="flex-reg">
 <input type="text" id="input" class="abc" placeholder="Enter the input here">
 <input type="button" id="convertButton" value="Convert" class="button">
 <!-- <input type="button" id="decode-64" value="Decode-64" >  -->
 
 
     <input type="text" id="output" class="op" placeholder="See the output here">
+        </div>
+      </div>
 </section>
     <footer class="footer">
         <!-- <div class="footer-div-1"> -->
