--- a/bin2dec.html
+++ b/bin2dec.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles2.css">
     <script defer src='./bin2dec.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Converter</title>
@@ -63,7 +63,7 @@
 
     </header>
 <section class="logic">
-  <div class="body2">
+  <div class="body-flex">
     <div class="flex-reg">
 <input type="text" id="input" class="abc" placeholder="Enter the input here">
 <input type="button" id="convertButton" value="Convert" class="button"> 
