--- a/dec2oct.html
+++ b/dec2oct.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles2.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src='./dec2oct.js'></script>
     <title>Number Converter</title>
@@ -65,7 +65,7 @@
  
 
 <section class="logic">
-  <div class="body2">
+  <div class="body-flex">
     <div class="flex-reg">
 <input type="text" id="input" class="abc" placeholder="Enter the input here">
 <input type="button" id="btn" value="Convert" class="button">
