--- a/oct2hex.html
+++ b/oct2hex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles2.css">
     <script defer src='./oct2hex.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Converter</title>
